fixed layout bugs

--- a/app/assets/stylesheets/layout/footer.scss
+++ b/app/assets/stylesheets/layout/footer.scss
@@ -7,6 +7,10 @@
     color: $font-yellow;
     transform: translate(0, 100%);
 
+    @include breakpoint (small down) {
+      transform: none;
+    }
+
     a {
       color: $white;
     }
